[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/textures/enemies/ship/zentraedi-ship.png" type="Texture" id=1]
[ext_resource path="res://src/game/levels/level1/boss/ShipStateMachine.gd" type="Script" id=2]
[ext_resource path="res://src/game/levels/level1/boss/states/DownState.gd" type="Script" id=3]
[ext_resource path="res://src/game/levels/level1/boss/Enemy.gd" type="Script" id=4]
[ext_resource path="res://src/game/levels/level1/boss/states/UpState.gd" type="Script" id=5]
[ext_resource path="res://src/game/levels/level1/boss/states/IdleState.gd" type="Script" id=6]
[ext_resource path="res://src/game/entities/enemies/pod/DieState.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.72549, 0.109804, 0.345098, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionPolygon2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4.76837e-07, -1.19209e-07 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Body:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.09, 0.59 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.788235, 0.960784, 0.0666667, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 1.1
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.64, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ), Vector2( 0, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionPolygon2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.65, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4.76837e-07, -1.19209e-07 ), Vector2( 0, 1 ), Vector2( 0, 0 ), Vector2( 0, -1 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 15
script = ExtResource( 4 )

[node name="ShipStateMachine" type="Node" parent="."]
script = ExtResource( 2 )
character_path = NodePath("..")
START_STATE = NodePath("Down")
STATES_LIST = [ NodePath("Idle"), NodePath("Down"), NodePath("Up"), NodePath("Die") ]

[node name="Timer" type="Timer" parent="ShipStateMachine"]

[node name="Idle" type="Node" parent="ShipStateMachine"]
script = ExtResource( 6 )

[node name="Down" type="Node" parent="ShipStateMachine"]
script = ExtResource( 3 )
state_id = "down"

[node name="Up" type="Node" parent="ShipStateMachine"]
script = ExtResource( 5 )
state_id = "up"

[node name="Die" type="Node" parent="ShipStateMachine"]
script = ExtResource( 7 )
state_id = "die"

[node name="HUD" type="Node2D" parent="."]
position = Vector2( 0, -5.36442e-07 )

[node name="Control" type="Control" parent="HUD"]
margin_left = -16.0
margin_top = -40.0
margin_right = 16.0
margin_bottom = -35.0

[node name="LifeProgressBar" type="ProgressBar" parent="HUD/Control"]
margin_left = -31.0
margin_top = 16.0
margin_right = 15.0
margin_bottom = 17.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
max_value = 50.0
step = 1.0
value = 50.0
rounded = true
percent_visible = false

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 4.76837e-07, -1.19209e-07 )
scale = Vector2( 0.105483, 0.121362 )
polygon = PoolVector2Array( -448, -128, -304, -152, -192, -128, -152, -152, -64, -152, -16, -128, -8, -104, 16, -128, 232, -80, 488, -32, 496, 0, 440, 0, 312, -8, 288, 16, 192, 0, 216, 40, 488, 80, 488, 112, 448, 136, 32, 112, -216, 176, -304, 144, -344, 80, -424, 32, -448, 8, -488, 8, -488, -32, -488, -80, -467.375, -93.4751, -467.375, -93.4751, -458.08, -110.039 )

[node name="BodyAnimations" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/die = SubResource( 5 )
anims/idle = SubResource( 2 )

[node name="DownRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 36 )

[node name="UpRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -33 )
collide_with_areas = true

[connection signal="hit" from="." to="ShipStateMachine" method="_on_damage_received"]
